add changes to img in html and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,27 @@
+h1 {text-align: center;}
 p {
   color: gray;
+  text-align: center;
 }
 
 h2.intro { 
   color: darkblue;
   width: 50%;
   font-style: italic;
+  text-align: center;
 }
 
 p.intro {
-  
-
+  font-style: serif;
 }
 
-img.intro {
-
-
+#img {
+  height: 40;
+  width: 50;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  float: center;
+  border: solid;
+  border-color: black;
 }
